🛠️ Fix password func
