# docs/swagger.json
@@ -391,7 +391,7 @@
                 }
             }
         },
-        "/auth/register/request-new-code": {
+        "/auth/register/resend-otp": {
             "post": {
                 "description": "Requests a new OTP code for confirming user registration. If the previous OTP code",
                 "consumes": [
@@ -411,7 +411,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handler.newRegistrationCodeRequest"
+                            "$ref": "#/definitions/handler.resendOTPCodeRequest"
                         }
                     }
                 ],
@@ -1709,9 +1709,19 @@
         "handler.createSecretRequest": {
             "type": "object",
             "required": [
+                "description",
+                "name",
                 "secret_type"
             ],
             "properties": {
+                "description": {
+                    "type": "string",
+                    "example": "This is a secret"
+                },
+                "name": {
+                    "type": "string",
+                    "example": "My Secret"
+                },
                 "secret_type": {
                     "allOf": [
                         {
@@ -1752,18 +1762,6 @@
                 }
             }
         },
-        "handler.newRegistrationCodeRequest": {
-            "type": "object",
-            "required": [
-                "email"
-            ],
-            "properties": {
-                "email": {
-                    "type": "string",
-                    "example": "user@example.com"
-                }
-            }
-        },
         "handler.registerRequest": {
             "type": "object",
             "required": [
@@ -1784,6 +1782,18 @@
                     "type": "string",
                     "minLength": 8,
                     "example": "12345678"
+                }
+            }
+        },
+        "handler.resendOTPCodeRequest": {
+            "type": "object",
+            "required": [
+                "email"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string",
+                    "example": "user@example.com"
                 }
             }
         },
